# porta

./: .claude.json  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  index.html  logo-preview.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
.github/workflows/: beta-release.yml  release.yml
docs/: cloudflare-tunnel-wildcard.md  design-qa-access-popover.md  infra-config.md  porta-relay-setup.md  spec-self-hosted-expose.md
docs/design-mockups/: 00_porta_shell_redesign_directions.html  01_porta_A_vs_C_hosts_domain.html  02_porta_C_workspaces_domain.html  03_porta_workspaces_sidebar_interactions.html  04_porta_workbench_tabs_git_terminal_ext.html  05_porta_app_open_link_actions.html  06_porta_terminal_tabs_split_fullscreen.html  07_porta_settings_grouped_cloudflare_hub.html  08_porta_git_tab_full.html  09_porta_tunnel_publish_tab.html  10_porta_logs_tab.html  11_porta_tunnel_publish_v2.html  12_porta_logs_tab_v2.html  13_porta_app_update_section.html  14_porta_kamal_deploy_extension.html  15_porta_self_update.html  16_porta_kamal_deploy_redesign_full.html  17_porta_activity_domain.html  18_porta_design_tokens_motion.html  19_porta_git_manager_full_redesign.html  20_porta_app_config_tab.html  21_porta_add_app_flow.html  22_porta_services.html  23_porta_vps_relay.html  24_porta_setup_onboarding.html  25_porta_command_palette.html  26_porta_worktree_instances.html  27_porta_file_editor.html  28_porta_traffic_inspector.html  29_porta_backup_snapshots.html  30_porta_phoenix_packages.html  31_porta_redesign_friendly_architecture.html  README.md  _FINAL_shell_c_complete.html  _review.html  index.html
extensions-bundled/: git-manager.README.md  kamal.README.md
extensions-bundled/_bridge-test/: app.js  index.html  porta.json
extensions-bundled/git-manager/: README.md  app.js  diff-util.js  highlight.js  index.html  porta.json  style.css  text-util.js
extensions-bundled/kamal/: README.md  app.js  style.css
scripts/: changelog-section.mjs  gen-preview-fixtures.mjs  release.mjs  vendor-git-manager.mjs
scripts/lib/: changelog.mjs  version.mjs
scripts/test/: release.test.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.beta.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: access_log.rs  app_state.rs  auto_detect.rs  auto_start.rs  backup.rs  caddy.rs  cloudflared_certs.rs  commands.rs  compose_parser.rs  dns.rs  docker_manager.rs  health.rs  idle_sleep.rs  lib.rs  listen_ports.rs  log_rotation.rs  main.rs  menu.rs  metrics.rs  port_check.rs  port_scanner.rs  porta_config.rs  process_manager.rs  settings.rs  setup.rs  tray.rs  wake_server.rs
src-tauri/src/commands/: access_log.rs  app.rs  app_files.rs  app_lifecycle.rs  backup.rs  cf_access.rs  cf_dns.rs  cf_email.rs  cf_zone.rs  compose.rs  container_observe.rs  deploy.rs  docker_disk.rs  docker_update_risk.rs  docker_updates.rs  extension_shell.rs  extension_storage.rs  extensions.rs  gdrive.rs  git.rs  git_sync.rs  health.rs  log_management.rs  mod.rs  port_check.rs  porta_config.rs  provision.rs  proxy_limits.rs  remote.rs  service.rs  service_template.rs  settings.rs  setup.rs  ssh.rs  system_metrics.rs  tailscale.rs  terminal.rs  tunnel.rs  updater_channel.rs  volume_snapshot.rs  (+3 more)
src-tauri/src/db/: app_repo.rs  instance_repo.rs  mod.rs  models.rs  remote_repo.rs  service_repo.rs  ssh_repo.rs  workspace_repo.rs
src-tauri/src/extensions/: loader.rs  manifest.rs  mod.rs
src-tauri/src/ssh/: engine.rs  keychain.rs  mod.rs
src/components/: AddAppModal.tsx  AddServiceModal.tsx  AddWorkspaceModal.tsx  AppCard.tsx  AppDetailSheet.tsx  AppSettingsModal.tsx  CanvasView.tsx  CommandPalette.tsx  DeployModal.tsx  DeploymentView.tsx  EditWorkspaceModal.tsx  Layout.tsx  LogViewer.tsx  ServiceCard.tsx  ServiceSettingsModal.tsx  SettingsModal.tsx  SettingsPage.tsx  (+8 more)
(+264 files in other folders)
