[package]
name = "porta"
version = "0.3.0-beta"
edition = "2021"

[lib]
name = "porta_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
nix = { version = "0.29", features = ["signal", "process"] }
libc = "0.2"
serde_yaml = "0.9"
pathdiff = "0.2"
sysinfo = "0.33"
futures-util = "0.3"

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
