[package]
name = "porta"
version = "0.14.0-beta.5"
edition = "2021"

[lib]
name = "porta_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

# `beta` = a side-by-side beta build: its own `~/.porta-beta` data dir (see
# porta_dir in lib.rs), paired with a separate bundle id + product name via
# tauri.beta.conf.json. Build: `tauri build --features beta --config src-tauri/tauri.beta.conf.json`.
[features]
beta = []

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking", "stream"] }
zip = "2"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
nix = { version = "0.29", features = ["signal", "process"] }
libc = "0.2"
serde_yaml = "0.9"
pathdiff = "0.2"
sysinfo = "0.33"
futures-util = "0.3"
psl = "2"
bcrypt = "0.15"
base64 = "0.22"
sha2 = "0.10"
urlencoding = "2"
tempfile = "3"
tiny_http = "0.12"
keyring = "3"
russh = "0.54"
tauri-plugin-single-instance = "2.4.3"

[dev-dependencies]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
